tests/expectations/compiler/finalize/get_or_incorrect_num_operands.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370021]: The type of `tokens` has no associated function `get_or_use` that takes 3 argument(s).
    --> compiler-test:18:9
     |
  18 |         tokens.get_or_use(addr, amount, 1u128);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `get_or_use` that takes 1 argument(s).
    --> compiler-test:20:9
     |
  20 |         amounts.get_or_use(1u8);
     |         ^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `get_or_use` that takes 0 argument(s).
    --> compiler-test:22:9
     |
  22 |         amounts.get_or_use();
     |         ^^^^^^^^^^^^^^^^^^^^"""]
